--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,52 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  scroll-behavior: smooth;
+  background-color: black;
+}
+
+/* Masque combiné horizontal + vertical */
+.fade-mask::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  pointer-events: none;
+  border-radius: 0.5rem;
+
+  background:
+    /* Vertical top-bottom */
+    linear-gradient(to bottom,
+      rgba(0, 0, 0, 0.85) 0%,
+      rgba(0, 0, 0, 0.0) 25%,
+      rgba(0, 0, 0, 0.0) 75%,
+      rgba(0, 0, 0, 0.85) 100%
+    ),
+    /* Horizontal left-right */
+    linear-gradient(to right,
+      rgba(0, 0, 0, 0.85) 0%,
+      rgba(0, 0, 0, 0.0) 25%,
+      rgba(0, 0, 0, 0.0) 75%,
+      rgba(0, 0, 0, 0.85) 100%
+    );
+}
+
+/* index.css */
+.hidden-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.hidden-scrollbar {
+  -ms-overflow-style: none; /* IE 11 */
+  scrollbar-width: none; /* Firefox */
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
